# osh-2025-labs

./: .gitignore  README.md
lab0/: CMakeLists.txt  Makefile  bubblesort.cpp  linux.md  markdown.md  split  split.cpp
lab1/: .config  README.md
lab1/syscall/: init  init.c
lab2/: README.md
lab2/shell/: Cargo.toml  out  vivado.jou
lab2/shell/src/: main.rs
lab3/: README.md
lab3/server/src/: main.rs
